--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.servlet.context-path=/
 
 
-spring.data.elasticsearch.cluster-name= my-application
+spring.data.elasticsearch.cluster-name= elasticsearch
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 spring.elasticsearch.jest.connection-timeout=3s
+#spring.elasticsearch.bboss.elasticUser=elastic
+#spring.elasticsearch.bboss.elasticPassword=changeme
