--- a/src/main/resources/es-config.properties
+++ b/src/main/resources/es-config.properties
@@ -1,8 +1,10 @@
-es.host=localhost
+#es.host=x
+es.host=x
 es.port=9200
 es.token=esestokentoken
 es.charset=UTF-8
 es.scheme=http
-
+es.user=elastic
+es.password=x
 es.client.connectTimeOut=5000
 es.client.socketTimeout=15000
